syntax = "proto3";

package jit.v1;

import "buf/validate/validate.proto";
import "common/v1/common.proto";

option go_package = "github.com/cloudfresco/sc-dcsa/internal/protogen/jit/v1";

// The Service service definition.
service ServiceService {
  rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse);
  rpc GetServices(GetServicesRequest) returns (GetServicesResponse);
  rpc GetService(GetServiceRequest) returns (GetServiceResponse);
  rpc GetServiceByPk(GetServiceByPkRequest) returns (GetServiceByPkResponse);
  rpc FindByCarrierServiceCode(FindByCarrierServiceCodeRequest) returns (FindByCarrierServiceCodeResponse);
}

message CreateServiceRequest {
  uint32 carrier_id = 1;
  string carrier_service_name = 2 [(buf.validate.field).string.max_len = 50];
  string carrier_service_code = 3 [(buf.validate.field).string.max_len = 11];
  string tradelane_id = 4 [(buf.validate.field).string.max_len = 8];
  string universal_service_reference = 5;
  string user_id = 6;
  string user_email = 7;
  string request_id = 8;
}

message CreateServiceResponse {
  Service service1 = 1;
}

message GetServicesRequest {
  string limit = 1;
  string next_cursor = 2;
  string user_email = 3;
  string request_id = 4;
}

message GetServicesResponse {
  repeated Service services = 1;
  string next_cursor = 2;
}

message GetServiceRequest {
  common.v1.GetRequest get_request = 1;
}

message GetServiceResponse {
  Service service1 = 1;
}

message GetServiceByPkRequest {
  common.v1.GetByIdRequest get_by_id_request = 1;
}

message GetServiceByPkResponse {
  Service service1 = 1;
}

message FindByCarrierServiceCodeRequest {
  string carrier_service_code = 1;
  string user_id = 2;
  string user_email = 3;
  string request_id = 4;
}

message FindByCarrierServiceCodeResponse {
  Service service1 = 1;
}

message Service {
  ServiceD service_d = 1;
  common.v1.CrUpdUser cr_upd_user = 2;
  common.v1.CrUpdTime cr_upd_time = 3;
}

message ServiceD {
  uint32 id = 1;
  bytes uuid4 = 2;
  string id_s = 3;
  uint32 carrier_id = 4;
  string carrier_service_name = 5;
  string carrier_service_code = 6;
  string tradelane_id = 7;
  string universal_service_reference = 8;
}
